syntax = "proto3";

package service;
option go_package="./pb";

service Like {
    rpc Thumbup(ThumbupRequest) returns (ThumbupResponse);
    rpc IsThumbup(IsThumbupRequest) returns (IsThumbupResponse);
}

message ThumbupRequest {
    string biz_id = 1; // 业务id
    int64 obj_id = 2; // 点赞对象id
    int64 user_id  = 3; // 用户id
    int32 like_type = 4; // 类型
}

message ThumbupResponse {
    string biz_id = 1; // 业务id
    int64 obj_id = 2; // 点赞对象id
    int64 like_num = 3; // 点赞数
    int64 dislike_num = 4; // 点踩数
}

message IsThumbupRequest {
    string biz_id = 1; // 业务id
    int64 target_id = 2; // 点赞对象id
    int64 user_id  = 3; // 用户id
}

message IsThumbupResponse {
    map<int64, UserThumbup> user_thumbups = 1;
}

message UserThumbup {
    int64 user_d = 1;
    int64 thumbup_time = 2;
    int32 like_type = 3; // 类型
}